added the rest of the api elements: flag, lang, pop, area, currency, car, and area

--- a/CountryInfoApp.html
+++ b/CountryInfoApp.html
@@ -53,6 +53,7 @@
                     <div class ="nation" id="nation-name"> 
                     </div>
                     <div class ="flag" id="nation-flag">
+                        <img id="flag-src">
                     </div>
                     <div class="language" id="nation-lan">
                     </div>
