small bg change

--- a/CountryInfoApp.html
+++ b/CountryInfoApp.html
@@ -30,6 +30,7 @@
                 /* margin: auto; */
                 height: 400px;
                 width: 100%;
+                background-color: aquamarine;
     
             }
 
