flag image & text align

--- a/CountryInfoApp.html
+++ b/CountryInfoApp.html
@@ -61,6 +61,9 @@
                 <div class="facts-container" id="facts-container">
 
                     <div class="flag-container">
+                        <div align="left">
+                            
+                        </div>
                         <div class ="flag" id="nation-flag">
                             <img id="flag-src" style="padding:1px;border:thin solid black;">
                         </div>
@@ -68,6 +71,9 @@
 
 
                     <div class = "fact-box">
+                        <div align="right">
+
+                        </div>
 
                         <div class = "n-name">NAME: 
                             <div class ="nation" id="nation-name"> 
